# spig

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/cubes/: Atlas.h  CMakeLists.txt  camera.h  cubes.cpp  fs_cubes.sc  varying.def.sc  vs_cubes.sc
include/: bigg.hpp
src/: bigg.cpp
